--- a/Doku_Sysadmin.bib
+++ b/Doku_Sysadmin.bib
@@ -1,3 +1,9 @@
+@misc{ SLAM,
+       author = "{Marc Götz}", 
+       title = "{Robot Navigation in Unknown Environment Based on Combined 2D and 3D Information}",
+       note =  "{August 2013}"
+                  }
+
 @misc{ Amazon,
        author = "{Amazon.de}", 
        title = "{RaspberryPiHardware}",
@@ -66,15 +72,53 @@
        title = "{Motorsteuerung}",
        note =  "{\url{https://github.com/Alminc91/Motorsteuerung_Ros};
                   aufgerufen am 13.Dezember 2013 .}"
-                  }                     
-                    
-    
-%http://wiki.ros.org/groovy/Installation/Raspbian            
-%http://de.wikipedia.org/wiki/Raspberry_Pi
-%http://www.amazon.de/Raspberry-Pi-RBCA000-Mainboard-1176JZF-S/dp/B008PT4GGC
-%http://www.raspbian.org/
-%http://www.softwareok.de/?seite=faq-System-Allgemein&faq=13
-%http://de.wikipedia.org/wiki/ARM-Architektur
-%http://www.rn-wissen.de/index.php/Raspberry_PI:_GPIO
-%http://www.raspberrypi.org/faqs <- bild Rasp
-%http://www.euron.org/maps/germany <- bild Volksbot
+                  }                                         
+                  
+@misc{ Pi,
+       author = "{Wikipedia}", 
+       title = "{Pi}",
+       note =  "{\url{http://de.wikipedia.org/wiki/Raspberry_Pi};
+                  aufgerufen am 13.Dezember 2013 .}"
+                  }                                                          
+             
+@misc{ Pipic,
+       author = "{Raspberrypi.org}", 
+       title = "{Pipic}",
+       note =  "{\url{http://www.raspberrypi.org/faqs};
+                  aufgerufen am 13.Dezember 2013 .}"
+                  }                                                                       
+             
+@misc{ ARM,
+       author = "{Wikipedia}", 
+       title = "{ARM}",
+       note =  "{\url{http://de.wikipedia.org/wiki/ARM-Architekturs};
+                  aufgerufen am 13.Dezember 2013 .}"
+                  }                                                                                    
+
+@misc{ Raspbian,
+       author = "{Raspbian.org}", 
+       title = "{Raspbian}",
+       note =  "{\url{http://www.raspbian.org/};
+                  aufgerufen am 13.Dezember 2013 .}"
+                  }                                                                                    
+           
+@misc{ ROSdescr,
+       author = "{ros.org}", 
+       title = "{ROSDescription}",
+       note =  "{\url{http://wiki.ros.org/de};
+                  aufgerufen am 13.Dezember 2013 .}"
+                  }                                                                                                      
+      
+@misc{ Volksbotpic,
+       author = "{euron.org}", 
+       title = "{Volksbotpic}",
+       note =  "{\url{http://www.euron.org/maps/germany};
+                  aufgerufen am 13.Dezember 2013 .}"
+                  }                                                                                                           
+      
+@misc{ Volksbot,
+       author = "{Volksbot.de}", 
+       title = "{Volksbot}",
+       note =  "{\url{http://www.volksbot.de/};
+                  aufgerufen am 13.Dezember 2013 .}"
+                  }                                                                                                               
