--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -39,7 +39,7 @@
 \end{frame}
 
 \begin{frame}
-\centerline{\includegraphics[width=6cm]{pics/iki.jpg}}
+\centerline{\includegraphics[width=8cm]{pics/iki.jpg}}
 \end{frame}
 
 \begin{frame}
@@ -69,6 +69,18 @@
 
 \begin{frame}
 \centerline{\includegraphics[width=6cm]{pics/ros_repos.jpg}}
+\end{frame}
+
+
+\begin{frame}
+\parbox{5cm}{\includegraphics[width=7cm]{pics/pilogo.png}}
+\huge \hfill 
+ $\rightarrow$
+\parbox{5cm}{\includegraphics[width=3cm]{pics/sd.jpg}}
+\end{frame}
+
+\begin{frame}
+\centerline{\includegraphics[width=6cm]{pics/groovy.jpg}}
 \end{frame}
 
 \end{document}
